# factropy

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.msys  README.md  demo-linux.sh  demo-msys.sh  package-linux-wayland.sh  package-linux-x11.sh  package-linux.sh  package-windows.sh
glew/: glew.c
imgui/: IconsFontAwesome4.h  build.cpp  imconfig.h  imgui.ini  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  setup.h
models/: air-filter-frame-hd.stl  air-filter-frame-ld.stl  air-filter-hd.stl  air-filter-ld.stl  air-filter-mesh-hd.stl  air-filter.scad  ammo-hd.stl  ammo-ld.stl  ammo.scad  arm-base-hd.stl  arm-base-ld.stl  arm-grip-hd.stl  arm-grip-ld.stl  arm-pillar-hd.stl  arm-pillar-ld.stl  arm-telescope1-hd.stl  arm-telescope1-ld.stl  arm-telescope2-hd.stl  arm-telescope2-ld.stl  arm-telescope3-hd.stl  arm-telescope3-ld.stl  arm-telescope4-hd.stl  arm-telescope4-ld.stl  arm-telescope5-hd.stl  arm.scad  assembler-chassis-hd.stl  assembler-chassis-ld.stl  assembler-chassis-vld.stl  assembler-piston-hd.stl  assembler-piston-ld.stl  assembler.scad  balancer-base-hd.stl  balancer-base-ld.stl  balancer-base-vld.stl  battery-body-hd.stl  battery-body-ld.stl  battery-cap-hd.stl  battery-cap-ld.stl  battery-rack-hd.stl  battery-rack-ld.stl  (+625 more)
programs/: test.4th  timer.4th
rela/: rela.hpp
scenario/: common.rela  create.rela  goals.rela  init.rela  items.rela  messages.rela  recipes.rela  specs.rela
shader/: flame.fs  flame.vs  ghost.fs  ghost.vs  glow.fs  glow.vs  part.fs  part.vs  shadow.fs  shadow.vs  terrain.fs  terrain.vs  tree.fs  tree.vs  water.fs  water.vs
src/: activeset.h  arm.cc  arm.h  balancer.cc  balancer.h  box.cc  box.h  burner.cc  burner.h  cart-stop.cc  cart-stop.h  (+201 more)
(+93 files in other folders)
